// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddOrEditQuestion renders add form correctly 1`] = `
<v-dialog
  max-width="600"
  persistent=""
>
  <v-card>
    <v-container>
      <v-card-title
        class="headline"
      >
        Add new question
      </v-card-title>
       
      <!---->
       
      <v-container>
        <form
          novalidate="novalidate"
        >
          <v-layout>
            <p
              class="caption grey--text lighten-2--text"
            >
              Type
            </p>
             
            <v-radio-group
              mandatory="true"
              row=""
            >
              <v-radio
                label="Static"
                value="static"
              />
               
              <v-radio
                label="Dynamic"
                value="dynamic"
              />
            </v-radio-group>
          </v-layout>
           
          <!---->
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <v-text-field
              id="question-text-input"
              label="Question*"
              name="questionText"
              placeholder="Type your question"
              required=""
            />
             
            <!---->
             
            <!---->
          </v-layout>
           
          <!---->
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <v-textarea
              id="question-answer-input"
              label="Answer*"
              name="answer"
              no-resize=""
              placeholder="Type your answer"
              required=""
            />
             
            <!---->
             
            <!---->
          </v-layout>
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <v-text-field
              id="question-value-input"
              label="Points*"
              name="questionValue"
              placeholder="Enter question value (points)"
              required=""
            />
             
            <!---->
             
            <!---->
          </v-layout>
           
          <small
            class="grey--text lighten-2--text"
          >
            *indicates required field
          </small>
           
          <div
            class="pt-4 right"
          >
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-cancel-button"
              type="reset"
            >
              
        Cancel
      
            </v-btn>
             
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-save-button"
              type="submit"
            >
              
        Save
      
            </v-btn>
          </div>
        </form>
      </v-container>
       
      <v-card-actions>
        <v-spacer />
         
        <!---->
         
        <!---->
      </v-card-actions>
    </v-container>
  </v-card>
</v-dialog>
`;

exports[`AddOrEditQuestion renders edit form correctly 1`] = `
<v-dialog
  max-width="600"
  persistent=""
>
  <v-card>
    <v-container>
      <v-card-title
        class="headline"
      >
        Edit question
      </v-card-title>
       
      <!---->
       
      <v-container>
        <form
          novalidate="novalidate"
        >
          <!---->
           
          <p
            class="pt-8"
          >
            Type: static
          </p>
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <!---->
             
            <p
              class="pt-8"
            >
              Question: 
            </p>
             
            <!---->
          </v-layout>
           
          <!---->
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <v-textarea
              id="question-answer-input"
              label="Answer*"
              name="answer"
              no-resize=""
              placeholder="Type your answer"
              required=""
            />
             
            <!---->
             
            <!---->
          </v-layout>
           
          <v-layout
            column=""
            justify-space-between=""
            mb-4=""
          >
            <v-text-field
              id="question-value-input"
              label="Points*"
              name="questionValue"
              placeholder="Enter question value (points)"
              required=""
            />
             
            <!---->
             
            <!---->
          </v-layout>
           
          <small
            class="grey--text lighten-2--text"
          >
            *indicates required field
          </small>
           
          <div
            class="pt-4 right"
          >
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-cancel-button"
              type="reset"
            >
              
        Cancel
      
            </v-btn>
             
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-save-button"
              type="submit"
            >
              
        Update
      
            </v-btn>
          </div>
        </form>
      </v-container>
       
      <v-card-actions>
        <v-spacer />
         
        <!---->
         
        <!---->
      </v-card-actions>
    </v-container>
  </v-card>
</v-dialog>
`;
